# raylib3Dpainter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: bvh.h  orbital_camera.h
